[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -75.0
margin_right = 128.0
margin_bottom = 75.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -137.0
margin_top = -80.0
margin_right = 388.0
margin_bottom = 232.0
color = Color( 0, 0, 0, 0.482353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 33.0
margin_right = 285.0
margin_bottom = 117.0
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_right = 278.0
margin_bottom = 40.0
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 69.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
text = "Continue"

[node name="Button2" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 73.0
margin_right = 153.0
margin_bottom = 40.0
text = "Easy Mode"

[node name="Button3" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 157.0
margin_right = 239.0
margin_bottom = 40.0
text = "Hard Mode"

[node name="Button4" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 243.0
margin_right = 278.0
margin_bottom = 40.0
text = "Exit"

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_left = 77.0
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
size_flags_horizontal = 4

[node name="CheckButton" type="CheckButton" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
margin_right = 123.0
margin_bottom = 40.0
pressed = true
text = "Sound:"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="toggled" from="PanelContainer/VBoxContainer/HBoxContainer2/CheckButton" to="." method="_on_CheckButton_toggled"]
